reactproductstoken.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactbookfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactbookfront
  template:
    metadata:
      labels:
        app: reactbookfront
    spec:
      containers:
      - name: reactbookfront
        image: superheatedboy/reactbookfront:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        command: ["npm", "start"]
        tty: true
---
apiVersion: v1
kind: Service
metadata:
  name: reactbookfront
spec:
  type: NodePort
  selector:
    app: reactbookfront
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: reactbookfront


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsapi
  template:
    metadata:
      labels:
        app: productsapi
    spec:
      containers:
      - name: productsapi
        image: superheatedboy/productsapi:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
        command: ["npm", "start"]
---
apiVersion: v1
kind: Service
metadata:
  name: productsapi
spec:
  type: NodePort
  selector:
    app: productsapi
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: productsapi


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokenapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokenapi
  template:
    metadata:
      labels:
        app: tokenapi
    spec:
      containers:
      - name: tokenapi
        image: superheatedboy/tokenapi:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3002
        command: ["npm", "start"]
---
apiVersion: v1
kind: Service
metadata:
  name: tokenapi
spec:
  type: NodePort
  selector:
    app: tokenapi
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
      name: tokenapi


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewsapi
  template:
    metadata:
      labels:
        app: reviewsapi
    spec:
      containers:
      - name: reviewsapi
        image: superheatedboy/reviewsapi:latest 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3003
        command: ["npm", "start"]
---
apiVersion: v1
kind: Service
metadata:
  name: reviewsapi
spec:
  type: NodePort
  selector:
    app: reviewsapi
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: reviewsapi


---
#cat <<EOF | kubectl apply -f -
apiVersion: v1
kind: Pod
metadata:
  name: busybox-sleep
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
#EOF
