gateway-k8s-istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookstore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookstore
spec:
  hosts:
  - "*"
  gateways:
  - bookstore-gateway
  http:
#
  - name: "customers"
    match:
    - uri:
        prefix: "/api/customers"
    route:
    - destination:
        host: productsapi
        port:
          number: 3002
#
  - name: "histories"
    match:
    - uri:
        prefix: "/api/histories"
    route:
    - destination:
        host: histories
        port:
          number: 3005
#
  - name: "reviews"
    match:
    - uri:
        prefix: "/api/reviews"
    route:
    - destination:
        host: reviews
        port:
          number: 3003
# default
  - name: "reactfront"
    route:
    - destination:
        host: reactfront
        port:
          number: 3000


# https://istio.io/latest/docs/reference/config/networking/virtual-service/
