gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookstore-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookstore
spec:
  hosts:
  - "*"
  gateways:
  - bookstore-gateway
  http:
#
  - name: "productsapi"
    match:
    - uri:
        prefix: "/api/products"
    route:
    - destination:
        host: productsapi
        port:
          number: 3001
#
  - name: "tokenapi"
    match:
    - uri:
        prefix: "/login"
    route:
    - destination:
        host: tokenapi
        port:
          number: 3002
#
  - name: "reviewsapi"
    match:
    - uri:
        prefix: "/api/reviews"
    route:
    - destination:
        host: reviewsapi
        port:
          number: 3003
# default
  - name: "reactbookfront"
    route:
    - destination:
        host: reactbookfront
        port:
          number: 3000


# https://istio.io/latest/docs/reference/config/networking/virtual-service/
